# bevy

crates/bevy_stats/: Cargo.toml  README.md
crates/bevy_stats/benches/: stats.rs
crates/bevy_stats/examples/: ability_instant.rs  component_sync.rs  cross_entity.rs  damage_pipeline.rs  equipment.rs  extension.rs  tagged_damage.rs
crates/bevy_stats/src/: access.rs  app_ext.rs  effect.rs  error.rs  expr.rs  lib.rs  lifecycle.rs  modifier.rs  require.rs  stats.rs  sync.rs  tags.rs
crates/bevy_stats/tests/: integration.rs
crates/bevy_stats_derive/: Cargo.toml
crates/bevy_stats_derive/src/: lib.rs
